# mongocxx-quickstart

./: CMakeLists.txt  README.md
src/: quickstart.cpp
